Updated Lebedev Wedding view to use the layout page

--- a/src/WeddingGallery/Views/HarryPotter/Detail.cshtml
+++ b/src/WeddingGallery/Views/HarryPotter/Detail.cshtml
@@ -1,19 +1,12 @@
 ﻿
 
 @{
-    Layout = null;
+    Layout = "~/Views/Shared/_Layout.cshtml";
+    ViewBag.Title = "Lebedev Wedding";
 
 }
 
-<!DOCTYPE html>
 
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title></title>
-</head>
-<body>
-    <div>
         <h1>@ViewBag.WhatsHappening</h1>
 
         <h3>The Deets:</h3>
@@ -37,6 +30,4 @@
     </div>
     }
 
-    </div>
-</body>
-</html>
+  
